--- a/index.html
+++ b/index.html
@@ -4,25 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shivani Nair Lekshmi-Web Developer,Programmer,UI/UX Designer</title>
+    <title>Portfolio - Shivani Nair Lekshmi</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <div class="container">
-     <div class="sidebar">
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>My Intro</li>
-                <li>Services</li>
-                <li>CV</li>
-                <li>Blog</li>
-            </ul>
-        </nav>
-    </div>
-    <div class="main">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem pariatur quas quam? Ullam sint quis, itaque eligendi optio sequi nihil, suscipit veniam dolorem recusandae eos iure consequatur impedit, delectus incidunt!
-    </div>
-</div>
-</body>
-</html>
+        <div class="sidebar">
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <div class="main">
+            <section id="home">
+                <h1>Shivani Nair Lekshmi</h1>
+                <p>UI/UX Designer & Web Developer</p>
+                <a href="#contact" class="btn">Get in touch</a>
+            </section>
+
+            <section id="about">
+                <h2>About Me</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consequat orci sit amet venenatis faucibus. Donec elementum euismod aliquam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam eget lectus at enim dignissim lacinia. Duis dignissim rhoncus lacus ac semper.</p>
+            </section>
+
+            <section id="services">
+                <h2>Services</h2>
+                <ul>
+                    <li>UI/UX Design</li>
+                    <li>Web Development</li>
+                    <li>Front-end Development</li>
+                    <li>Back-end Development</li>
+                </ul>
+            </section>
+
+            <section id="portfolio">
+                <h2>Portfolio</h2>
+                <div class="portfolio-grid">
+                    <div class="portfolio-item">
+                        <img src="project1.jpg" alt="Project 1">
+                        <h3>Project 1</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="portfolio-item">
+                        <img src="project2.jpg" alt="Project 2">
+                        <h3>Project 2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="portfolio-item">
+                        <img src="project3.jpg" alt="Project 3">
+                        <h3>Project 3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </section>
+
+            <section id="contact">
+                <h2>Contact Me</h2>
+                <form action="submit-form.php" method="post">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="message">Message:</label>
+                    <textarea id="message
